# render-demo

./: CMakeLists.txt  LICENSE  README.md
Models/: Sphere.nff
Models/dabrovic-sponza/: sponza.mtl
Models/sibenik/: sibenik.mtl
Shaders/: color.fs  color.vs  deferred.fs  deferred.vs  deferredGBuffer.fs  deferredTiled.fs  deferredTiled.vs  font.fs  font.vs  forward.fs  forward.vs  forwardPlus.fs  light.in  lightCull.cs  screenAbsTexture.fs  screenDepthmap.fs  screenDepthmap.vs  screenLightHeatmap.fs  screenTexture.fs
Source/: camera.cpp  camera.h  main.cpp  main.h  model.cpp  model.h  shader.cpp  shader.h  text.cpp  text.h  texture.cpp  texture.h
