cmake_minimum_required(VERSION 2.8)

project(RenderDemo)

add_definitions("-std=c++11")
file(GLOB_RECURSE sources Source/**.cpp Source/**.h)
add_executable(${PROJECT_NAME} ${sources})

INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(GLEW REQUIRED glew)
FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(assimp REQUIRED)

INCLUDE_DIRECTORIES(Source ./ThirdParty/glm/ ${SDL2_INCLUDE_DIRS} ${OPENGL_INCLUDE_DIRS} ${GLEW_INCLUDE_DIRS} ${ASSIMP_INCLUDE_DIRS})

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${OPENGL_LIBRARIES} ${GLEW_LIBRARIES} ${ASSIMP_LIBRARIES})

